--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,22 +1,29 @@
 .header{
+    background-color: #fff;
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: antiquewhite;
+    top: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 30px;
+    border-radius: 40px;
+    overflow: hidden;
+    box-sizing: border-box;
+    box-shadow: 0 0 15px rgb(200,200,200);
+    
 }
-.menuBar{
-    margin-top: 15px;
-    background-color: white;
-    width: 95%;
-    margin: auto;
-
-
+*{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    box-sizing: border-box;
 }
-.menuBar .logo{
-    background-color: aqua;
+.bar {
+    background-color: beige;
+}
+.bar .logo{
 
-} 
-.menuBar .logo img{
+    padding: 0;
+}
+.bar .logo img{
     width: 100px;
 }
