--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -19,7 +19,6 @@
     font-family: 'Poppins', sans-serif;
 }
 .bar {
-    background-color: beige;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -41,11 +40,40 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
-    background-color: orangered;
-}    
+} 
+.bar .menuBar .menu span{
+    cursor: pointer;
+    font-size: 15px;
+    color: #035;
+    font-family: DM Sans;
+    font-weight: 500;
+}   
 .bar .menuBar .appointment{
     width: 40%;
-    background-color: olivedrab;
     display: flex;
     justify-content: right;
-}                            
+}
+.bar .menuBar .appointment span{
+    cursor: pointer;
+    font-size: 15px;
+    color: #035;
+    display: flex;
+    font-weight: 500;
+    align-items: center;
+    font-family: DM Sans;
+    flex-direction: row;
+    gap: 5px;
+}
+.bar .btnMenu{
+    font-size: 22px;
+    justify-content: right;
+    display: none;
+}
+ @media screen and (max-width:767.98px) {
+    .bar .menuBar{
+        display: none;
+    }
+    .bar .btnMenu{
+        display: flex;
+    }
+ }                            
