--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,14 +1,21 @@
+.fixed{
+    width: 100%;
+    height: max-content;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    background-color: rgb(255, 255, 255);
+    z-index: 1000;
+    transform: translateX(-50%);
+    padding-top: 15px;
+}
 .header{
     background-color: #fff;
-    position: fixed;
-    top: 15px;
-    left: 50%;
-    transform: translateX(-50%);
     padding: 8px 30px;
     border-radius: 40px;
     box-sizing: border-box;
     box-shadow: 0 0 15px rgb(200,200,200);
-    z-index: 1000;
+    
 }
 *{
     margin: 0;
@@ -90,8 +97,8 @@
     
 }
  @media screen and (max-width:767.98px) {
-    .header{
-        top: 10px;
+    .fixed{
+        padding-top: 10px;
     }
     .bar .logo img{
         width: 90px;
