--- a/src/component/home/home.css
+++ b/src/component/home/home.css
@@ -1,11 +1,14 @@
 .body{
     padding: 15px;
+    scroll-behavior: smooth;
   }
   *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
+    scroll-behavior: smooth;
+    
   }
 .section1{
 
@@ -421,6 +424,58 @@
     cursor: pointer;
 }
 
+.section9{
+    padding: 40px 12%;
+    margin-bottom: 15px;
+}
+.section9 .contentDiv{
+    background-color: #0025FF;
+    display: flex;
+    justify-content: center;
+    
+}
+.section9 .contentDiv .content{
+    flex-direction: column;
+    row-gap: 10px;
+    padding: 40px 8%;
+}
+.section9 .contentDiv .content .title{
+    font-size: 32px;
+    color: white;
+    font-family: Space Grotesk;
+    font-weight: 600;
+    
+}.section9 .contentDiv .content .description{
+
+    font-size: 16px;
+    color: white;
+    font-family: DM Sans;
+    font-weight: 500;  
+}
+.section9 .contentDiv .content .btn{
+
+    font-size: 16px;
+    color: blue;
+    font-family: DM Sans;
+    font-weight: 500;
+    background-color: white;
+    padding: 10px 18px;
+    width: max-content;
+    border-radius: 0;
+    
+}
+.section9 .contentDiv .imgBox{
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.section9 .contentDiv .imgBox img{
+    width: 90%;
+
+}
+
 
 
 /* x-small devices (portrait phones, less than 576px)*/
@@ -456,6 +511,19 @@
         flex-direction: column;
         align-items: center;
     }
+    .section9{
+        padding: 35px 8%;
+    }
+    .section9 .contentDiv .content {
+        padding: 20px 5%;
+    }
+    .section9 .contentDiv .content .title{
+        font-size: 28px;
+    }
+    .section9 .contentDiv .content .description{
+        font-size: 15px;
+    }
+    
 }
 
 /* medium devices (tablets, less than 992px)*/
@@ -498,7 +566,16 @@
     .section5{
         padding: 40px 10%;
     }
-    
+    .section7{
+        padding: 50px 10%;
+    }
+    .section7 .titleDiv .title{
+        font-size: 34px;
+    }
+    .section9 .contentDiv .content .btn{
+        font-size: 15px;
+        padding: 8px 14px;       
+    }
 }
 
 @media screen and (max-width:1199.98px) {
