--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -143,4 +143,10 @@
         display: flex;
     }
     
+ }
+ @media  screen and (max-width:576px) {
+    .fixed{
+        top:-2px;
+        padding-top: 0;
+    }
  }                            
